# mandelbrot-viewer

./: .gitmodules  CMakeLists.txt  Makefile  README.org  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
